fix added id to profile card to fix styling overlap

--- a/src/styles/pages/_profilePage.scss
+++ b/src/styles/pages/_profilePage.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 }
 
-.card {
+#profile-card {
 	width: 500px;
 }
 
@@ -21,6 +21,3 @@
 	margin-right: auto;
 	width: 50%;
 }
-// .card {
-// 	background-color: black;
-// }
